<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dati.datichat.Archivos">

    <item
        android:id="@+id/sinc"
        android:icon="@drawable/autorenew"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/compartir"
        android:title="@string/Compartir"
        app:showAsAction="never" >

        <menu>
            <item
                android:id="@+id/foto"
                android:title="@string/Foto"
                />
            <item
                android:id="@+id/archivo"
                android:title="@string/Archivo"
                />
        </menu>
    </item>
    <item
        android:id="@+id/ordenar"
        android:title="@string/Ordenar"
        app:showAsAction="never" >

        <menu>
            <item
                android:id = "@+id/nombreo"
                android:title = "@string/Nombre"
                />
            <item
                android:id = "@+id/fecha"
                android:title = "@string/Fecha"
                />
        </menu>
    </item>
</menu>